--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
-    <script type="text/javascript" src="script.js"></script>
+    <div class="container">
+        <h1>Choose your move to play</h1>
+        <p class="gamesplayed">Games played: 0</p>
+        <div class="buttons">
+            <button data-move="rock"><img src="./images/rock.png"></button>
+            <button data-move="paper"><img src="./images/paper.png"></button>
+            <button data-move="scissors"><img src="./images/scissors.png"></button>
+        </div>
+    </div>
+    <div class="footer">
+        <p>
+        <a href="https://www.vecteezy.com/free-vector/human">Human Vectors by Vecteezy</a>, vectors uploaded by &nbsp;<a href="https://www.vecteezy.com/members/nightwolfdezines">nightwolfdezines</a><br>
+        &copy; konradadev 2022
+        </p>
+    </div>
 </body>
 </html>
